--- a/travis.yml
+++ b/travis.yml
@@ -10,6 +10,8 @@ script:
   - ruby -Itest test/models_usuario_test.rb
   - ruby -Itest test/models_veiculo_test.rb
   - ruby -S bundle exec cucumber --profile default
-
+  -
 services:
   - postgresql
+
+dist: trusty
