--- a/travis.yml
+++ b/travis.yml
@@ -4,6 +4,8 @@ rvm:
   - 2.3.3.
 
 script:
+  - bundle install
+  - bundle update
   - bundle exec rake db:create:all
   - bundle exec rake dv:migrate RAILS_ENV=test
   - ruby -Itest test/models_motorista_test.rb
