Ajuste em motorista(nescessária recriação da classe)

--- a/test/fixtures/motorista.yml
+++ b/test/fixtures/motorista.yml
@@ -3,13 +3,13 @@
 one:
   cpf: 
   nome: MyString
-  numeroDeHoras: 1
+  diasDeFolga: 
   bancoDeHoras: false
   telefone: 
 
 two:
   cpf: 
   nome: MyString
-  numeroDeHoras: 1
+  diasDeFolga: 
   bancoDeHoras: false
   telefone: 
