--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,17 @@
 language: ruby
+
 rvm:
   - 2.3.3
+
+script:
+  - bundle exec rake db:create:all
+  - bundle exec rake dv:migrate RAILS_ENV=test
+  - ruby -Itest test/models_motorista_test.rb
+  - ruby -Itest test/models_usuario_test.rb
+  - ruby -Itest test/models_veiculo_test.rb
+  - ruby -S bundle exec cucumber --profile default
+  -
+services:
+  - postgresql
+
+dist: trusty
