--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: ruby
 rvm:
   - 2.3.3
 
+before_install:
+  - 2.0.2
+
 script:
   - bundle exec rake db:create:all
   - bundle exec rake dv:migrate RAILS_ENV=test
