--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
   - 2.3.3
 
 before_install:
-  - Bundler version: 2.0.2
+  - gem install bundler -v '> 2'
 
 script:
   - bundle exec rake db:create:all
