--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 
 script:
   - bundle exec rake db:create:all
-  - bundle exec rake dv:migrate RAILS_ENV=test
+  - bundle exec rake db:migrate RAILS_ENV=test
   - ruby -Itest test/models_motorista_test.rb
   - ruby -Itest test/models_usuario_test.rb
   - ruby -Itest test/models_veiculo_test.rb
