--- a/test/fixtures/veiculos.yml
+++ b/test/fixtures/veiculos.yml
@@ -3,17 +3,15 @@
 one:
   placa: MyString
   modelo: MyString
-  ano: 
+  ano: 1
   cor: MyString
   quilometragem: 
-  manutencaoEmDia: false
-  alocado: false
+  ativo: false
 
 two:
   placa: MyString
   modelo: MyString
-  ano: 
+  ano: 1
   cor: MyString
   quilometragem: 
-  manutencaoEmDia: false
-  alocado: false
+  ativo: false
